--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
-  "name": "back",
+  "name": "backend",
   "version": "1.0.0",
-  "main": "serveer.js",
+  "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "concurrently": "^5.3.0",
+    "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.7.36",
+    "@types/nodemailer": "^6.4.0",
+    "@types/passport": "^1.0.4",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
-    "nodemailer": "^6.4.11",
-    "mongoose": "^5.10.15",
-    "nodemon": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.7",
+    "nodemailer": "^6.4.11",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server.js",
-    "server": "nodemon server.js",
-    "dev": "cross-env NODE_ENV=development concurrently \"yarn run server\""
+    "start": "node dist/server.js",
+    "dev": "ts-node server.ts",
+    "nodemon": "nodemon"
   }
 }
